# streamlink-gtk

./: .gitignore  README.md  meson.build  meson_options.txt  org.coderic.streamlinkgtk.json  requirements.txt
.github/workflows/: release.yml
data/: meson.build  org.coderic.streamlinkgtk.desktop.in  org.coderic.streamlinkgtk.gschema.xml  org.coderic.streamlinkgtk.metainfo.xml.in  org.coderic.streamlinkgtk.service.in
data/icons/: meson.build
flatpak/pypi-wheels/: .gitignore  README.md
po/: POTFILES.in
src/: meson.build  recording.py  streamlink-gtk.in  streamlinkgtk.gresource.xml
src/streamlink_gtk/: job_item.py  main.py  player.py  recording.py  streamlink_backend.py  window.py  window.ui
tools/: fetch-pypi-wheels.sh  package-msys2-portable.sh
